Edited config.yaml and gemfile

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Cayman theme
-description: Cayman is a clean, responsive theme for GitHub Pages.
+title: Aman Kapoor
+description: Aman Kapoor is a Computer Science student pursuing B.Tech from Amity University. His technical interests are in web development. He is a Software Engineering Intern with Wirecog, LLC.
 show_downloads: true
 google_analytics:
-theme: 
+theme: jekyll-theme-cayman
